manifests/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jujhar

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: potato-deployment
  namespace: jujhar
  labels:
    app: potato
spec:
  selector:
    matchLabels:
      app: potato
  replicas: 3
  minReadySeconds: 5
  strategy:
    # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 1

  template:
    metadata:
      labels:
        app: potato
    spec:
      restartPolicy: Always
      containers:
        - name: web
          image: roubleknew/k8s-training:v2
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
